# krust-cri

./: .gitignore  Package.resolved  Package.swift  README.md
Scripts/: generate-protos.sh  prepare-containerization-assets.sh  sign-krust-cri.sh  smoke-containerization-backend.sh  smoke-containerization-network.sh  smoke-critest-basic.sh  smoke-k3s-single-node.sh  smoke-kubelet-cri-surface.sh  smoke-kubelet-static-pods.sh
Sources/KrustCRI/: CRIServices.swift  ContainerizationRuntimeBackend.swift  KrustCRICommand.swift  LogManager.swift  RuntimeBackend.swift  RuntimeState.swift
Sources/KrustKubeletPod/: main.swift
Tests/KrustCRITests/: ContainerStatusTests.swift  LogManagerTests.swift  PodSandboxStatsTests.swift  PortForwardURLTests.swift  SandboxDNSConfigTests.swift  SandboxPortMappingTests.swift
crates/port-forward-bridge/: Cargo.toml
crates/port-forward-bridge/src/: bridge.rs  lib.rs  main.rs  session.rs
crates/port-forward-bridge/src/spdy/: dictionary.rs  frame.rs  mod.rs
crates/port-forward-bridge/tests/: spdy_copy_tests.rs
docs/: architecture.md  poc.md
research/: containerization-cri-macos.md  virtualization-hotplug-2026-06-14.md
testdata/crictl/: container.json  network-client-container.json  network-client-sandbox.json  network-server-container.json  network-server-sandbox.json  sandbox.json
